refactor(domain): encapsulate Chimpanzee state changes with domain methods